optimized login and build
Signed-off-by: Lock <jgfranciaph@gmail.com>