@@ -13,11 +13,20 @@ repositories {
     mavenCentral()
 }
 
+val javafxVersion = "21.0.7"
 val junitVersion = "5.10.2"
+
+val osName = System.getProperty("os.name").lowercase()
+val javafxPlatform = when {
+    osName.contains("win") -> "win"
+    osName.contains("mac") -> "mac"
+    osName.contains("linux") -> "linux"
+    else -> throw GradleException("Unsupported OS: $osName")
+}
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
@@ -28,14 +37,23 @@ tasks.withType<JavaCompile> {
 application {
     mainModule.set("com.lock.stockit")
     mainClass.set("com.lock.stockit.Loader")
+    // Add JVM arguments for the 'run' task
+    applicationDefaultJvmArgs = listOf(
+        "--enable-native-access=javafx.graphics",
+        // Add this if the Unsafe warning persists and is problematic
+        // "--add-opens=java.base/sun.misc=javafx.graphics"
+    )
 }
 
 javafx {
-    version = "21"
+    version = javafxVersion
     modules = listOf("javafx.controls", "javafx.fxml")
 }
 
 dependencies {
+    implementation("org.openjfx:javafx-controls:$javafxVersion:$javafxPlatform")
+    implementation("org.openjfx:javafx-fxml:$javafxVersion:$javafxPlatform")
+
     implementation("org.controlsfx:controlsfx:11.2.1")
     implementation("com.dlsc.formsfx:formsfx-core:11.6.0") {
         exclude(group = "org.openjfx")
@@ -45,8 +63,9 @@ dependencies {
     }
     implementation("org.kordamp.ikonli:ikonli-javafx:12.3.1")
     implementation("com.google.code.gson:gson:2.10.1")
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
 }
 
 tasks.withType<Test> {
@@ -54,9 +73,14 @@ tasks.withType<Test> {
 }
 
 jlink {
-    imageZip.set(layout.buildDirectory.file("/distributions/app-${javafx.platform.classifier}.zip"))
+    imageZip.set(layout.buildDirectory.file("distributions/app-${javafxPlatform}.zip"))
     options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
     launcher {
-        name = "app"
+        name = "stockit"
+        jvmArgs.addAll(listOf(
+            "--enable-native-access=javafx.graphics",
+            // Add this if the Unsafe warning persists and is problematic
+            // "--add-opens=java.base/sun.misc=javafx.graphics"
+        ))
     }
 }
